<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="googleplaydeveloper.jdotspacegdot.expolog.ExposureEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/activity"
            style="@style/TextViewHeading"
            />

        <TextView
            android:id="@+id/exposure_activity"
            style="@style/TextViewBody"
            android:text=""
            />

        <TextView
            android:text="@string/date"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/exposure_date"
            style="@style/TextViewBody"
            android:text=""
            />

        <TextView
            android:text="@string/instance"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/exposure_instance"
            style="@style/EditTextInput"
            />

        <TextView
            android:text="@string/instructions_prediction"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/exposure_prediction"
            style="@style/EditTextInput"
            />

        <TextView
            android:text="@string/instructions_challenge"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/exposure_challenge"
            style="@style/EditTextInput"
            />

        <TextView
            android:text="@string/instructions_experience"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/exposure_experience"
            style="@style/EditTextInput"
            />

        <TextView
            android:text="@string/instructions_reflection"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/exposure_reflection"
            style="@style/EditTextInput"
            />

        <TextView
            android:text="@string/notes"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/exposure_notes"
            style="@style/EditTextInput"
            />

    </LinearLayout>

</ScrollView>