<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="googleplaydeveloper.jdotspacegdot.expolog.ReflectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/activity"
            style="@style/TextViewHeading"
            />

        <TextView
            android:id="@+id/reflect_activity"
            style="@style/TextViewBody"
            android:text=""
            />

        <TextView
            android:text="@string/instance"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/reflect_instance"
            style="@style/TextViewBody"
            android:text=""
            />

        <TextView
            android:text="@string/instructions_experience"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/input_experience"
            style="@style/EditTextInput"
            />

        <TextView
            android:text="@string/instructions_prediction_challenge_1"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/reflect_prediction"
            style="@style/TextViewBody"
            android:text=""
            />

        <TextView
            android:text="@string/instructions_prediction_challenge_2"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/reflect_challenge"
            style="@style/TextViewBody"
            android:text=""
            />

        <TextView
            android:text="@string/instructions_reflection"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/reflect_reflection"
            style="@style/EditTextInput"
            />

        <TextView
            android:text="@string/notes"
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/reflect_notes"
            style="@style/EditTextInput"
            />

    </LinearLayout>

</ScrollView>
