<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="googleplaydeveloper.jdotspacegdot.expolog.HelpFragment">

        <TextView
            style="@style/TextViewBody"
            android:layout_marginTop="20dp"
            android:text="@string/help_introduction"
            />

        <TextView
            style="@style/TextViewHeading"
            android:layout_marginTop="40dp"
            android:text="@string/help_getting_started_title"
            />

        <TextView
            style="@style/TextViewBody"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/help_getting_started_body"
            />

    </LinearLayout>
</ScrollView>
